raw project done

--- a/html/admin.html
+++ b/html/admin.html
@@ -25,7 +25,7 @@
                         <div class="stat-label">Total Orders</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-value" id="totalRevenue">$0.00</div>
+                        <div class="stat-value" id="totalRevenue">₹0.00</div>
                         <div class="stat-label">Total Revenue</div>
                     </div>
                     <div class="stat-card">
@@ -44,6 +44,17 @@
                 <h2>📋 Recent Orders</h2>
                 <div class="recent-orders-list" id="recentOrdersList">
                     <p class="empty-state">No recent orders</p>
+                </div>
+            </section>
+
+            <!-- Food Items Management -->
+            <section class="food-management">
+                <div class="section-header">
+                    <h2>🍔 Food Items Management</h2>
+                    <a href="/admin/add-food" class="btn btn-primary" style="width: auto; margin-top: 0; text-decoration: none; display: inline-block;">+ Add New Food Item</a>
+                </div>
+                <div class="food-items-list" id="foodItemsList">
+                    <p class="empty-state">Loading food items...</p>
                 </div>
             </section>
 
