--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -28,7 +28,7 @@
         </div>
         <div class="detail-row">
           <span>Total:</span>
-          <span id="orderTotal">$0.00</span>
+          <span id=\"orderTotal\">₹0.00</span>
         </div>
       </div>
 
