final framework project done

--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,7 @@
             <div class="nav-menu">
                 <a href="#" class="nav-link">Home</a>
                 <a href="#" class="nav-link" id="orderFoodLink">Order Food</a>
-                <a href="#" class="nav-link">About</a>
-                <a href="#" class="nav-link">Contact</a>
+                <a href="/about" class="nav-link">About</a>
             </div>
             <div class="nav-buttons">
                 <button class="btn-login" id="viewCartBtn">🛒 Cart <span id="cartCount">0</span></button>
@@ -220,5 +219,10 @@
     </div>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 Foodzz — Crafted by P Suman Patro</p>
+    </footer>
 </body>
 </html>
